# rust_training

./: .gitignore  Cargo.toml  README.md
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/hello_world/src/: main.rs
session1/login/: Cargo.toml  users.json
session1/login/src/: main.rs
session1/login_manager/: Cargo.toml  users.json
session1/login_manager/src/: main.rs
session2/affinity/src/: main.rs
session2/channels1/src/: main.rs
session2/dashing/src/: main.rs
session2/dead_locks/: Cargo.toml
session2/dead_locks/src/: main.rs
session2/divide_work/src/: main.rs
session2/footgun/src/: main.rs
session2/hello_thread/: Cargo.toml
session2/hello_thread/src/: main.rs
session2/mutexes/src/: main.rs
session2/parking/src/: main.rs
session2/rayon_iters/src/: main.rs
session2/rayon_scopes/src/: main.rs
session2/rwlocks/src/: main.rs
session2/scoped_threads/src/: main.rs
session2/thread_builder/src/: main.rs
session2/thread_prio/: Cargo.toml
session2/thread_prio/src/: main.rs
session2/workers/src/: main.rs
session3/blocking/src/: main.rs
session3/db/: .env  Cargo.toml  hello_db.db  hello_db.db-wal
session3/db/migrations/: 20240419155342_initial.sql  20240419190543_more_messages.sql
session3/db/src/: main.rs
session3/errors/: Cargo.toml
session3/errors/src/: main.rs
session3/recursion/: Cargo.toml
session3/thumbnail_server/: Cargo.toml  images.db  images.db-shm  images.db-wal
session3/web_service/: Cargo.toml
session5/collector/: Cargo.toml
session5/shared_data/: Cargo.toml
(+23 files in other folders)
