workspace = { members = [ "session1/authentication","session1/hello_world", "session1/login", "session1/login_manager", "session2/affinity", "session2/channels1", "session2/dashing", "session2/dead_locks", "session2/divide_work", "session2/footgun", "session2/hello_thread", "session2/mutexes", "session2/parking", "session2/rayon_iters", "session2/rayon_scopes", "session2/rwlocks", "session2/scoped_threads", "session2/thread_builder", "session2/thread_prio", "session2/workers", "session3/blocking", "session3/errors", "session3/hello_async", "session3/hello_tokio", "session3/logspan", "session3/recursion", "session3/restclient", "session3/tokio_select", "session3/tokio_testing"] }
[package]
name = "rust_training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
